# zerkalo-sudby

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOY.md  docker-compose.yml
.planning/: PROJECT.md  REFERENCE-TZ.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-telegram-auth/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VALIDATION.md  SKELETON.md
.planning/phases/02-deck-spread-catalog/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-REVIEW.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-the-ritual-mock/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-HUMAN-UAT.md  03-PATTERNS.md  03-RESEARCH.md  03-REVIEW.md  03-UI-SPEC.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-real-personal-reading-keystone/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-06-PLAN.md  04-06-SUMMARY.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-HUMAN-UAT.md  04-RESEARCH.md  04-REVIEW.md  04-SECURITY.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-history-profile/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-06-SUMMARY.md  05-07-PLAN.md  05-07-SUMMARY.md  05-CONTEXT.md  05-DISCUSSION-LOG.md  05-HUMAN-UAT.md  05-RESEARCH.md  05-REVIEW.md  05-SECURITY.md  05-VALIDATION.md  05-VERIFICATION.md  deferred-items.md
.planning/phases/06-free-limits-soft-paywall/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-HUMAN-UAT.md  06-RESEARCH.md  06-REVIEW.md  06-SECURITY.md  06-UI-SPEC.md  06-VALIDATION.md  06-VERIFICATION.md  deferred-items.md
.planning/phases/07-telegram-stars-payments/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-06-PLAN.md  07-06-SUMMARY.md  07-07-PLAN.md  07-07-SUMMARY.md  07-CONTEXT.md  07-DISCUSSION-LOG.md  07-RESEARCH.md  07-REVIEW.md  07-SECURITY.md  07-UAT.md  07-VALIDATION.md
.planning/phases/08-admin-analytics-polish-deploy/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-04-PLAN.md  08-04-SUMMARY.md  08-CONTEXT.md  08-DISCUSSION-LOG.md  08-RESEARCH.md  08-REVIEW.md  08-SECURITY.md  08-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  0001_initial_schema.py  0002_user_limits_rolling_window.py  0003_reading_answer_style.py  0004_yookassa_payment_fields.py  0005_prompt_template_versions.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  admin_prompts.py  auth.py  decks.py  deps.py  events.py  health.py  payments.py  readings.py  spreads.py  users.py
backend/app/core/: __init__.py  brand_guard.py  config.py  db.py  db_url.py  errors.py  llm_client.py  logging.py  openrouter_adapter.py  redis.py  scheduler.py  security.py  sentry.py
backend/app/models/: __init__.py  analytics.py  base.py  billing.py  card.py  deck.py  enums.py  prompt.py  reading.py  spread.py  topic.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  catalog.py  events.py  payment.py  reading.py
backend/app/seed/: __init__.py  __main__.py  loader.py
backend/app/seed/data/: _gen_cards.py  cards.json  compatibility.json  decks.json  products.json  prompts.json  spreads.json  topics.json
backend/app/services/: __init__.py  analytics.py  answer_style.py  card_draw.py  catalog.py  llm.py  payments.py  prompt_engine.py  reading.py  safety.py  telegram_auth.py
backend/tests/: conftest.py  test_no_live_yookassa.py
backend/tests/integration/: _history_helpers.py  conftest.py  fakes_payments.py  test_admin_guard.py  test_admin_prompts.py  test_analytics_helper.py  test_auth_flow.py  test_card_draw_db.py  test_catalog.py  test_error_shape.py  test_events_api.py  test_generation_logs.py  test_health.py  test_history_personalization_gate.py  test_limit_concurrency.py  test_limits_reset.py  test_me.py  test_migration.py  test_payments_api.py  test_payments_scheduler.py  test_payments_service.py  test_paywall_block.py  test_reading_buckets.py  test_readings_auth.py  test_readings_delete.py  test_readings_detail.py  test_readings_flow.py  test_readings_limit.py  test_readings_list.py  test_safety_gate.py  test_seed.py  test_seed_compatibility.py  test_settings_patch.py  test_throttle.py
backend/tests/unit/: test_brand_guard.py  test_card_draw.py  test_catalog_schema.py  test_config.py  test_determine_access.py  test_initdata.py  test_llm_service.py  test_models_metadata.py  test_prompt_engine.py  test_reading_schema.py  test_recommend_reason.py  test_safety_routing.py
docs/: card-image-prompts.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: admin.ts  auth.ts  client.ts  decks.ts  events.ts  me.ts  payments.ts  readings.ts  spreads.ts
frontend/src/components/: AuthGate.tsx  CardArtFallback.test.tsx  CardArtFallback.tsx  CatalogScreen.failure.test.tsx  CatalogScreen.test.tsx  CatalogScreen.tsx  DeckCard.tsx  DeckCarousel.test.tsx  DeckCarousel.tsx  ErrorBoundary.test.tsx  (+5 more)
(+56 files in other folders)
