[project]
name = "zerkalo-backend"
version = "0.1.0"
description = "Зеркало Судьбы — FastAPI backend (Walking Skeleton + Telegram auth spine)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.136.*",
    "uvicorn[standard]>=0.49",
    "sqlalchemy[asyncio]==2.0.*",
    "asyncpg==0.31.*",
    "alembic==1.18.*",
    "pydantic==2.13.*",
    "pydantic-settings==2.14.*",
    "redis[hiredis]>=5.2,<6",
    "pyjwt==2.13.*",
    # Bot framework — module/dependency only in Phase 1 (NOT wired until Phase 7).
    # Human-approved addition during the Package Legitimacy checkpoint so the lock
    # is established once and stays consistent. github.com/aiogram/aiogram
    "aiogram==3.28.*",
    # LLM client + resilience — Phase 4 (KEYSTONE). Human-approved during the Package
    # Legitimacy checkpoint (both slopcheck [OK]/pypi, registry-confirmed, locally
    # resolvable: anthropic 0.109.1, tenacity 9.1.4). anthropic is the CLAUDE.md-locked
    # provider (messages.parse Structured Outputs). github.com/anthropics/anthropic-sdk-python
    "anthropic>=0.69,<1",
    # Bounded retry + per-attempt timeout around the single LLM call. github.com/jd/tenacity
    "tenacity>=9,<10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line length is handled by the formatter, not the linter
    "B008",  # function-call-in-default-argument: FastAPI's Depends() idiom is intentional
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
